--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
   <properties>
     <tomcat.version>7.0.57</tomcat.version>
   </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
